[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ShopScene.gd" id="1_shop"]
[ext_resource type="PackedScene" uid="uid://dgk2likp7r6om" path="res://scenes/CardButton.tscn" id="2_card"]

[node name="ShopScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label_Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ショップ"
horizontal_alignment = 1

[node name="Label_Gold" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "所持ゴールド: 0"
horizontal_alignment = 1

[node name="HBoxCards" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Card1" parent="VBoxContainer/HBoxCards" instance=ExtResource("2_card")]
layout_mode = 2

[node name="Card2" parent="VBoxContainer/HBoxCards" instance=ExtResource("2_card")]
layout_mode = 2

[node name="Card3" parent="VBoxContainer/HBoxCards" instance=ExtResource("2_card")]
layout_mode = 2

[node name="HBoxBuy" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Btn_Buy1" type="Button" parent="VBoxContainer/HBoxBuy"]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
text = "購入"

[node name="Btn_Buy2" type="Button" parent="VBoxContainer/HBoxBuy"]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
text = "購入"

[node name="Btn_Buy3" type="Button" parent="VBoxContainer/HBoxBuy"]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
text = "購入"

[node name="Btn_Leave" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "立ち去る"
